--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebStudio</title>
 </head>
+
 <body>
   <!--Верхняя линия -->
   <header>
@@ -42,11 +43,15 @@
         </li>
         <li>
           <h3>Пунктуальность</h3>
-          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+          </p>
         </li>
         <li>
           <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          <p>
+            Равным образом консультация с широким активом в значительной степени обуславливает.
+          </p>
         </li>
         <li>
           <h3>Современные технологии</h3>
@@ -104,7 +109,7 @@
     <address>
       <ul>
         <li>
-          <a href="">г. Киев, пр-т Леси Украинки, 26</a>
+          <a href="">https://goo.gl/maps/npCChXU9xTYnC5Zz8</a>
         </li>
         <li>
           <a href="mailto:info@example.com">info@example.com</a>
