--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <address>
       <ul>
         <li>
-          <a href="">https://goo.gl/maps/npCChXU9xTYnC5Zz8</a>
+          <a href="https://goo.gl/maps/npCChXU9xTYnC5Zz8">г. Киев, пр-т Леси Украинки, 26</a>
         </li>
         <li>
           <a href="mailto:info@example.com">info@example.com</a>
