--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <a href="https://goo.gl/maps/npCChXU9xTYnC5Zz8">г. Киев, пр-т Леси Украинки, 26</a>
         </li>
         <li>
-          <a href="mailto:info@example.com">info@example.com</a>
+          <a href="mailto:info@example.com" rel="">info@example.com</a>
         </li>
         <li>
           <a href="tel:+380991111111">+38 099 111 11 11</a>
