--- a/index.html
+++ b/index.html
@@ -79,24 +79,22 @@
       <h2>Наша Команда</h2>
       <ul>
         <li>
-          <a href="">
-            <img src="./images/img1.jpg" alt="Игорь Демьяненко" width="270" />
-          </a>
+          <img src="./images/img1.jpg" alt="Игорь Демьяненко" width="270" />
           <h3>Игорь Демьяненко</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <a href=""><img src="./images/img2.jpg" alt="Ольга Репина" width="270" /></a>
+          <img src="./images/img2.jpg" alt="Ольга Репина" width="270" />
           <h3>Ольга Репина</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <a href=""><img src="./images/img3.jpg" alt="Николай Тарасов" width="270" /></a>
+          <img src="./images/img3.jpg" alt="Николай Тарасов" width="270" />
           <h3>Николай Тарасов</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <a href=""><img src="./images/img4.jpg" alt="Михаил Ермаков" width="270" /></a>
+          <img src="./images/img4.jpg" alt="Михаил Ермаков" width="270" />
           <h3>Михаил Ермаков</h3>
           <p>UI Designer</p>
         </li>
@@ -109,10 +107,11 @@
     <address>
       <ul>
         <li>
-          <a href="https://goo.gl/maps/npCChXU9xTYnC5Zz8">г. Киев, пр-т Леси Украинки, 26</a>
+          <a href="https://goo.gl/maps/npCChXU9xTYnC5Zz8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
+            Украинки, 26</a>
         </li>
         <li>
-          <a href="mailto:info@example.com" rel="">info@example.com</a>
+          <a href="mailto:info@example.com">info@example.com</a>
         </li>
         <li>
           <a href="tel:+380991111111">+38 099 111 11 11</a>
